# vulnera

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  nginx.conf
cli/: advanced_scans.go  e2e_test.go  go.mod  main.go  ssrf_scan.go
payload/: payload.txt
plugins/crawler/: CMakeLists.txt  crawler.cpp
plugins/cred_stuffer/: CMakeLists.txt  cred_stuffer.cpp
plugins/dependency_confusion/: CMakeLists.txt  dependency_confusion.cpp
plugins/git_leaker/: CMakeLists.txt  git_leaker.cpp
plugins/lfi_scanner/: CMakeLists.txt  lfi_scanner.cpp
plugins/logger/: CMakeLists.txt  logger.cpp
plugins/s3_scanner/: CMakeLists.txt  s3_scanner.cpp
plugins/ssrf_scanner/: CMakeLists.txt  ssrf_scanner.cpp
plugins/xss_hunter/: CMakeLists.txt  xss_hunter.cpp
spectre-d/: CMakeLists.txt
spectre-d/include/spectre/: arweave_client.h  canary_monitor.h  network_manager.h  plugin.h  plugin_loader.h  proof_queue.h  tor_proxy.h  websocket_server.h
spectre-d/include/spectre/http/: http_server.h
spectre-d/plugins/: api_fuzzer.cpp  sql_injector.cpp  xss_hunter.cpp
spectre-d/src/: arweave_client.cpp  canary_monitor.cpp  main.cpp  network_manager.cpp  plugin_loader.cpp  proof_queue.cpp  tor_proxy.cpp  websocket_server.cpp
spectre-d/src/http/: http_server.cpp
web/: index.html  package.json
